package org.mtcg;

public class Battle
{
    private User user1;
    private User user2;
    private String log;

    public void startBattle()
    {

    }

    public String getLog()
    {
        return log;
    }
}

