package org.mtcg;

public class Card
{
    private String name;
    private int damage;
    private String elementType;

    public int getDamage()
    {
        return damage;
    }

    public String getName()
    {
        return name;
    }

    public String getElementType()
    {
        return elementType;
    }
}

