package org.mtcg;

import java.util.List;

public class Scoreboard
{
    private List<User> users;

    public List<User> getScoreboard()
    {
        return users;
    }
}

