package org.mtcg;

public class Trade
{
    private Card offeredCard;
    private Card requiredCard;

    public void initiateTrade()
    {

    }

    public void acceptTrade()
    {

    }
}
