package org.mtcg.app.models;

import java.util.List;

public class Deck
{
    private List<Card> cards;

    public void addCard(Card card)
    {

    }

    public void removeCard(Card card)
    {

    }

    public List<Card> getTopCards()
    {
        return cards;
    }
}

