package org.mtcg.app.models;

public class MonsterCard extends Card
{
    public MonsterCard(String name, int damage, String elementType)
    {
        super(name, damage, elementType);
    }
    public void attack()
    {

    }
}
