package org.mtcg.app.models;

public class SpellCard extends Card
{
    public SpellCard(String name, int damage, String elementType)
    {
        super(name, damage, elementType);
    }
    public void castSpell()
    {

    }
}
